# theseed-bot

./: .gitignore  README.md  namumark.py  pyproject.toml  requirements.txt  setup.py  theseed.py  theseed_hash.js
example/: script1.py  script2.py  script3.py  script4.py  script4.txt  script5.py
theseed_bot/: __init__.py  namumark.py  theseed.py
